<resources>
    <string name="app_name">Склад Влада</string>
    <string name="button_sales_text">Продажи</string>
    <string name="button_medicine_text">Лекарства</string>
    <string name="button_save">Сохранить</string>
    <string name="button_exit_text">Выйти из личного кабинета</string>
    <string name="button_pharmacy_text">Клиенты</string>
    <string name="button_manufacturer_text">Поставщики</string>
    <string name="text_view_password_text">Пароль: </string>
    <string name="text_view_login_text">Логин: </string>
    <string name="text_view_email_text">Почта: </string>
    <string name="text_view_email_password_text">Пароль от почты: </string>
    <string name="button_enter_text">Войти</string>
    <string name="button_register_text">Зарегестрироваться</string>
    <string name="button_create_text">Создать</string>
    <string name="button_add_text">Добавить</string>
    <string name="text_view_count">Количество: </string>
    <string name="button_cancel_text">Отмена</string>
    <string name="text_view_name">Название: </string>
    <string name="button_update_text">Изменить</string>
    <string name="button_delete_text">Удалить</string>
    <string name="text_view_medicine_name">Название: </string>
    <string name="text_view_type">Тип: </string>
    <string name="text_view_price">Цена за упаковку: </string>
    <string name="button_date_from"> От </string>
    <string name="button_date_to"> До </string>
    <string name="button_create_request_text">Создать заявку</string>
    <string name="button_create_manufacturer_text">Создать производителя</string>
    <string name="button_to_acceptance_supply_text">Прием поставок</string>
    <string name="text_view_address_text">Адрес</string>
    <string name="button_create_medicine_text">Создать лекарство</string>
    <string name="text_view_dosage">Дозировка</string>
    <string name="text_view_form">Форма выпуска</string>
    <string name="button_add_pharmacy">Добавить аптеку</string>
    <string name="text_view_manufacturer_name">Название производителя</string>
    <string name="text_view_cost">Цена за шт.</string>
    <string name="button_get_supply">Принять поставку</string>
    <string name="button_check_request">Перейти к заявкам</string>
    <string name="button_check_iternal">Посмотреть содержание</string>
    <string name="button_sending">Отправления</string>
    <string name="button_accept_supply">Принять поставку</string>
    <string name="button_confirm">Подтвердить</string>
    <string name="button_set_defective">Брак</string>
    <string name="DateString">Выберите дату окончания срока годности</string>
    <string name="ChooseDateAction">"Выберите дату "</string>
    <string name="button_report_text">Отчет</string>
    <string name="button_search_text">Поиск</string>
    <string name="button_medicines_text">Лекарства на складе</string>
    <string name="button_create_sending">Создать отправку</string>
    <string name="button_send_sending">Отправить</string>
    <string name="button_basket_check">"Просмотреть корзину "</string>
    <string name="button_report">Отчет</string>
    <string name="button_edit_storage">Редактировать аккаунт</string>
    <string name="text_view_pharmacy_name">Название аптеки</string>
</resources>