<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CheckSendingActivity">


    <TextView
        android:id="@+id/text_view_name"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_name" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"/>

    <TextView
        android:id="@+id/text_view_quality"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_count" />

    <EditText
        android:id="@+id/edit_text_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"/>

    <TextView
        android:id="@+id/text_view_cost"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_cost" />

    <EditText
        android:id="@+id/edit_text_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"/>








    <Button
        android:id="@+id/button_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_confirm"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_cancel_text"/>


</LinearLayout>