<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SendsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1000"
        android:orientation="horizontal">

        <ScrollView
            android:id="@+id/scrollViewMedicines"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_weight="100"
            android:background="@color/white">

            <RelativeLayout
                android:id="@+id/relativeLayoutMedicines"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/tableLayoutSending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"></TableLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/button_to_create_sending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/button_create_sending" />

    <Button
        android:id="@+id/button_send_sending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/button_send_sending" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/button_cancel_text" />



</LinearLayout>